fix(subnav): Fix arrows position - so that it does not break on new line (#212)
* fix(subnav): Fix arrows position - so that it does not break on new line

Closes ticket #431

* fix arrows passing through right element

--- a/src/components/structural/header/header-submenu/header-submenu.module.css
+++ b/src/components/structural/header/header-submenu/header-submenu.module.css
@@ -315,10 +315,14 @@
 }
 
 .emptySpace {
-  padding-left: 20%;
+  padding-left: 20px;
+
+  @media (--bp-lg) {
+    padding-left: 20%;
+  }
 }
 
 .arrow {
-  position: relative;
-  top: 3px;
+  bottom: 3px;
+  position: absolute;
 }
